--- a/assets/style.css
+++ b/assets/style.css
@@ -1,17 +1,452 @@
-/* Custom properties/variables  */
+/* Custom properties/variables. 
+ * I put the main theme color definitions here to 
+ * improve my quality of life.
+*/
 :root {
-    --main-yellow: #f8e9a1;
-    --main-blue: #a8d0e6;
-    --main-darker-blue: #;
-    --main-salmon: #f76c6c;
-    --main-black: #17252a;
+  --theme-hue1: #3b8beb;
+  --theme-hue2: #c4dbf6;
+  --theme-hue3: #e7e3d4;
+  --theme-hue4: #8590aa;
+  --theme-hue5: #af3800;
+}
+
+/* Kill the space at the edges. Base reset. */
+* {
+margin: 0;
+padding: 0;
+}
+
+/* box and font sizing. */
+*,
+*::before,
+*::after {
+box-sizing: inherit;
 }
 
 html {
-    background: var(--main-dark-green)
+box-sizing: border-box;
+
+/* Set font size for easy rem calculations
+ * default document font size = 16px, 1rem = 16px, 100% = 16px
+ * (100% / 16px) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px
+*/
+font-size: 62.5%;
+scroll-behavior: smooth;
 }
 
+/* Media queries for proper sizing */
+/* 1200px / 16px = 75em */
+@media (max-width: 75em) {
+html {
+  font-size: 60%;
+}
+}
+
+/* 980px / 16px = 61.25em */
+@media (max-width: 61.25em) {
+html {
+  font-size: 58%;
+}
+}
+
+/* 460px / 16px = 28.75em */
+@media (max-width: 28.75em) {
+html {
+  font-size: 55%;
+}
+}
+
+/* Base styles */
+body {
+  background: var(--theme-hue1);
+  font-family: 'Kosugi Maru', sans-serif;
+  font-size: 1.8rem; /* 18px */
+  font-weight: 400;
+  line-height: 1.4;
+  color: white;
+  overflow-x: hidden;
+}
+
+/* For the animated clouds to roll through. */
+#background-wrap {
+  bottom: 0;
+left: 0;
+  margin-top: 100px;
+padding-top: 50px;
+position: fixed;
+right: 0;
+top: 0;
+z-index: -1;
+}
+
+/* KEYFRAMES */
+
+@-webkit-keyframes animateCloud {
+  0% {
+      margin-left: -1000px;
+  }
+  100% {
+      margin-left: 100%;
+  }
+}
+
+@-moz-keyframes animateCloud {
+  0% {
+      margin-left: -1000px;
+  }
+  100% {
+      margin-left: 100%;
+  }
+}
+
+@keyframes animateCloud {
+  0% {
+      margin-left: -1000px;
+  }
+  100% {
+      margin-left: 100%;
+  }
+}
+
+/* ANIMATIONS */
+
+.x1 {
+-webkit-animation: animateCloud 35s linear infinite;
+-moz-animation: animateCloud 35s linear infinite;
+animation: animateCloud 35s linear infinite;
+
+-webkit-transform: scale(0.65);
+-moz-transform: scale(0.65);
+transform: scale(0.65);
+}
+
+.x2 {
+-webkit-animation: animateCloud 20s linear infinite;
+-moz-animation: animateCloud 20s linear infinite;
+animation: animateCloud 20s linear infinite;
+
+-webkit-transform: scale(0.3);
+-moz-transform: scale(0.3);
+transform: scale(0.3);
+}
+
+.x3 {
+-webkit-animation: animateCloud 30s linear infinite;
+-moz-animation: animateCloud 30s linear infinite;
+animation: animateCloud 30s linear infinite;
+
+-webkit-transform: scale(0.5);
+-moz-transform: scale(0.5);
+transform: scale(0.5);
+}
+
+.x4 {
+-webkit-animation: animateCloud 18s linear infinite;
+-moz-animation: animateCloud 18s linear infinite;
+animation: animateCloud 18s linear infinite;
+
+-webkit-transform: scale(0.4);
+-moz-transform: scale(0.4);
+transform: scale(0.4);
+}
+
+.x5 {
+-webkit-animation: animateCloud 25s linear infinite;
+-moz-animation: animateCloud 25s linear infinite;
+animation: animateCloud 25s linear infinite;
+
+-webkit-transform: scale(0.55);
+-moz-transform: scale(0.55);
+transform: scale(0.55);
+}
+
+/* OBJECTS */
+
+.cloud {
+background: #fff;
+background: -moz-linear-gradient(top,  #fff 5%, #f1f1f1 100%);
+background: -webkit-gradient(linear, left top, left bottom, color-stop(5%,#fff), color-stop(100%,#f1f1f1));
+background: -webkit-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+background: -o-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+background: -ms-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+background: linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 );
+
+-webkit-border-radius: 100px;
+-moz-border-radius: 100px;
+border-radius: 100px;
+
+-webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+-moz-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+
+height: 120px;
+position: relative;
+width: 350px;
+}
+
+.cloud:after, .cloud:before {
+  background: #fff;
+content: '';
+position: absolute;
+z-indeX: -1;
+}
+
+.cloud:after {
+-webkit-border-radius: 100px;
+-moz-border-radius: 100px;
+border-radius: 100px;
+
+height: 100px;
+left: 50px;
+top: -50px;
+width: 100px;
+}
+
+.cloud:before {
+-webkit-border-radius: 200px;
+-moz-border-radius: 200px;
+border-radius: 200px;
+
+width: 180px;
+height: 180px;
+right: 50px;
+top: -90px;
+}
+footer {
+  /* Make it look like grass */
+  background-color: #52733b;
+  color:white;
+  text-align: center;
+}
+
+h1, h2 {
+  color: white;
+  font-align: center;
+  z-index: 10;
+  text-shadow: 2px 2px 1px #1f1f1f;
+}
+
+h1 {
+  font-size: 6rem;
+}
+
+h2 {
+  font-size: 4.2rem;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+i {
+  /* Ensures icons aren't smooshed together. */
+  margin-left: 1rem;
+  color: white;
+  font-size: 2.4rem;
+  transition: transform 0.3s ease-out;
+}
+
+/* Navigation bar */
+.nav {
+  background: var(--theme-hue1);
+  display: flex;
+  justify-content: flex-end;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10;
+  text-shadow: 2px 2px 1px #1f1f1f;
+}
+
+.nav-list {
+  display: flex;
+  margin-right: 2rem;
+}
+
+@media (max-width: 28.75em) {
+  .nav {
+      justify-content: center;
+  }
+  
+  .nav-list {
+      margin: 0 1rem;
+  }
+}
+
+.nav-list a {
+  display: block;
+  font-size: 2.2rem;
+  padding: 2rem;
+}
+
+.nav-list a:hover {
+  background: var(--theme-hue5);
+}
+
+/* Contact Section */
+#contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 80vh;
+  padding: 0 2rem;background: var(--theme-hue1);
+}
+
+.contact-section-header > h2 {
+font-size: 6rem;
+}
+
+@media (max-width: 28.75em) {
+.contact-section-header > h2 {
+  font-size: 4rem;
+}
+}
+
+#contact > ul {
+  font-size: 2rem;
+  margin: 3rem;
+}
+.contact-font {
+  font-size: 2.5rem;
+}
+
+.contact-links {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  max-width: 980px;
+  margin-top: 1rem;
+  flex-wrap: wrap;
+}
+
+.contact-details {
+  font-size: 2.4rem;
+  text-shadow: 2px 2px 1px #1f1f1f;
+  transition: transform 0.3s ease-out;
+}
+
+.contact-details:hover {
+  transform: translateY(8px);
+}
+
+/* Projects section */
+#projects {
+  background: var(--theme-hue1);
+  color: var(--theme-hue1);
+  height: 100vh;
+  margin: 0;
+  /* Makes the nav bar not cover the title */
+  padding: 10rem 2rem;
+  text-align: center;
+}
+
+/* "Automagic" image grid using no media queries */
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-gap: 4rem;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  margin-bottom: 6rem;
+}
+
+@media (max-width: 30.625em) {
+  .projects-section {
+      padding: 6rem 1rem;
+  }
+
+  .projects-grid {
+      grid-template-columns: 1fr;
+  }
+}
+
+.project {
+  background: var(--theme-hue4);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+}
+
+.code {
+  color: var(--theme-hue3);
+  transition: color 0.3s ease-out;
+}
+
+.project:hover .code {
+  color: var(--theme-hue5);
+}
+
+.project-image {
+  border-radius: 5px;
+  height: calc(100% - 6.8rem);
+  width: 100%;
+  object-fit: cover;
+}
+
+.project-title {
+  border-radius: 5px;
+  color: white;
+  font-size: 2rem;
+  padding: 2rem 0.5rem;
+}
+
+.btn {
+display: inline-block;
+padding: 1rem 2rem;
+border-radius: 2px;
+}
+
+.btn-show-all {
+font-size: 2rem;
+background: var(--main-gray);
+transition: background 0.3s ease-out;
+}
+
+.btn-show-all:hover {
+background: var(--main-red);
+}
+
+.btn-show-all:hover > i {
+transform: translateX(2px);
+}
+
+.btn-show-all > i {
+margin-left: 10px;
+transform: translateX(0);
+transition: transform 0.3s ease-out;
+}
+
+#tech {
+  display: flex;
+  font-size: 2.5rem;
+  margin-top: 2rem;
+}
+
+/* Welcome Section */
 #welcome-section {
-    background: var(--main-green);
+  align-items: center;
+  background-repeat: no-repeat;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Kosugi Maru', sans-serif;
+  height: 100vh;
+  justify-content: center;
+  margin: 0;
+  width: 100%;
 }
 
+#welcome-section > p {
+  font-size: 3rem;
+  font-weight: 200;
+}
