--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -12,48 +12,49 @@
 
 /* Kill the space at the edges. Base reset. */
 * {
-margin: 0;
-padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 /* box and font sizing. */
 *,
 *::before,
 *::after {
-box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 html {
-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: 'Kosugi Maru', sans-serif;
 
-/* Set font size for easy rem calculations
- * default document font size = 16px, 1rem = 16px, 100% = 16px
- * (100% / 16px) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px
-*/
+  /* Set font size for easy rem calculations
+  * default document font size = 16px, 1rem = 16px, 100% = 16px
+  * (100% / 16px) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px
+  */
 font-size: 62.5%;
-scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 /* Media queries for proper sizing */
 /* 1200px / 16px = 75em */
 @media (max-width: 75em) {
-html {
-  font-size: 60%;
-}
+  html {
+    font-size: 60%;
+  }
 }
 
 /* 980px / 16px = 61.25em */
 @media (max-width: 61.25em) {
-html {
-  font-size: 58%;
-}
+  html {
+    font-size: 58%;
+  }
 }
 
 /* 460px / 16px = 28.75em */
 @media (max-width: 28.75em) {
-html {
-  font-size: 55%;
-}
+  html {
+    font-size: 55%;
+  }
 }
 
 /* Base styles */
@@ -70,148 +71,148 @@ body {
 /* For the animated clouds to roll through. */
 #background-wrap {
   bottom: 0;
-left: 0;
+  left: 0;
   margin-top: 100px;
-padding-top: 50px;
-position: fixed;
-right: 0;
-top: 0;
-z-index: -1;
+  padding-top: 50px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: -1;
 }
 
 /* KEYFRAMES */
 
 @-webkit-keyframes animateCloud {
   0% {
-      margin-left: -1000px;
+    margin-left: -1000px;
   }
   100% {
-      margin-left: 100%;
+    margin-left: 100%;
   }
 }
 
 @-moz-keyframes animateCloud {
   0% {
-      margin-left: -1000px;
+    margin-left: -1000px;
   }
   100% {
-      margin-left: 100%;
+    margin-left: 100%;
   }
 }
 
 @keyframes animateCloud {
   0% {
-      margin-left: -1000px;
+    margin-left: -1000px;
   }
   100% {
-      margin-left: 100%;
+    margin-left: 100%;
   }
 }
 
 /* ANIMATIONS */
 
 .x1 {
--webkit-animation: animateCloud 35s linear infinite;
--moz-animation: animateCloud 35s linear infinite;
-animation: animateCloud 35s linear infinite;
+  -webkit-animation: animateCloud 35s linear infinite;
+  -moz-animation: animateCloud 35s linear infinite;
+  animation: animateCloud 35s linear infinite;
 
--webkit-transform: scale(0.65);
--moz-transform: scale(0.65);
-transform: scale(0.65);
+  -webkit-transform: scale(0.65);
+  -moz-transform: scale(0.65);
+  transform: scale(0.65);
 }
 
 .x2 {
--webkit-animation: animateCloud 20s linear infinite;
--moz-animation: animateCloud 20s linear infinite;
-animation: animateCloud 20s linear infinite;
+  -webkit-animation: animateCloud 20s linear infinite;
+  -moz-animation: animateCloud 20s linear infinite;
+  animation: animateCloud 20s linear infinite;
 
--webkit-transform: scale(0.3);
--moz-transform: scale(0.3);
-transform: scale(0.3);
+  -webkit-transform: scale(0.3);
+  -moz-transform: scale(0.3);
+  transform: scale(0.3);
 }
 
 .x3 {
--webkit-animation: animateCloud 30s linear infinite;
--moz-animation: animateCloud 30s linear infinite;
-animation: animateCloud 30s linear infinite;
+  -webkit-animation: animateCloud 30s linear infinite;
+  -moz-animation: animateCloud 30s linear infinite;
+  animation: animateCloud 30s linear infinite;
 
--webkit-transform: scale(0.5);
--moz-transform: scale(0.5);
-transform: scale(0.5);
+  -webkit-transform: scale(0.5);
+  -moz-transform: scale(0.5);
+  transform: scale(0.5);
 }
 
 .x4 {
--webkit-animation: animateCloud 18s linear infinite;
--moz-animation: animateCloud 18s linear infinite;
-animation: animateCloud 18s linear infinite;
+  -webkit-animation: animateCloud 18s linear infinite;
+  -moz-animation: animateCloud 18s linear infinite;
+  animation: animateCloud 18s linear infinite;
 
--webkit-transform: scale(0.4);
--moz-transform: scale(0.4);
-transform: scale(0.4);
+  -webkit-transform: scale(0.4);
+  -moz-transform: scale(0.4);
+  transform: scale(0.4);
 }
 
 .x5 {
--webkit-animation: animateCloud 25s linear infinite;
--moz-animation: animateCloud 25s linear infinite;
-animation: animateCloud 25s linear infinite;
+  -webkit-animation: animateCloud 25s linear infinite;
+  -moz-animation: animateCloud 25s linear infinite;
+  animation: animateCloud 25s linear infinite;
 
--webkit-transform: scale(0.55);
--moz-transform: scale(0.55);
-transform: scale(0.55);
+  -webkit-transform: scale(0.55);
+  -moz-transform: scale(0.55);
+  transform: scale(0.55);
 }
 
 /* OBJECTS */
 
 .cloud {
-background: #fff;
-background: -moz-linear-gradient(top,  #fff 5%, #f1f1f1 100%);
-background: -webkit-gradient(linear, left top, left bottom, color-stop(5%,#fff), color-stop(100%,#f1f1f1));
-background: -webkit-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
-background: -o-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
-background: -ms-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
-background: linear-gradient(top,  #fff 5%,#f1f1f1 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 );
+  background: #fff;
+  background: -moz-linear-gradient(top,  #fff 5%, #f1f1f1 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(5%,#fff), color-stop(100%,#f1f1f1));
+  background: -webkit-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+  background: -o-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+  background: -ms-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+  background: linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 );
 
--webkit-border-radius: 100px;
--moz-border-radius: 100px;
-border-radius: 100px;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  border-radius: 100px;
 
--webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
--moz-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
 
-height: 120px;
-position: relative;
-width: 350px;
+  height: 120px;
+  position: relative;
+  width: 350px;
 }
 
 .cloud:after, .cloud:before {
   background: #fff;
-content: '';
-position: absolute;
-z-indeX: -1;
+  content: '';
+  position: absolute;
+  z-indeX: -1;
 }
 
 .cloud:after {
--webkit-border-radius: 100px;
--moz-border-radius: 100px;
-border-radius: 100px;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  border-radius: 100px;
 
-height: 100px;
-left: 50px;
-top: -50px;
-width: 100px;
+  height: 100px;
+  left: 50px;
+  top: -50px;
+  width: 100px;
 }
 
 .cloud:before {
--webkit-border-radius: 200px;
--moz-border-radius: 200px;
-border-radius: 200px;
+  -webkit-border-radius: 200px;
+  -moz-border-radius: 200px;
+  border-radius: 200px;
 
-width: 180px;
-height: 180px;
-right: 50px;
-top: -90px;
+  width: 180px;
+  height: 180px;
+  right: 50px;
+  top: -90px;
 }
 footer {
   /* Make it look like grass */
@@ -272,11 +273,11 @@ i {
 
 @media (max-width: 28.75em) {
   .nav {
-      justify-content: center;
+    justify-content: center;
   }
   
   .nav-list {
-      margin: 0 1rem;
+    margin: 0 1rem;
   }
 }
 
@@ -303,19 +304,20 @@ i {
 }
 
 .contact-section-header > h2 {
-font-size: 6rem;
+  font-size: 6rem;
 }
 
 @media (max-width: 28.75em) {
-.contact-section-header > h2 {
-  font-size: 4rem;
-}
+  .contact-section-header > h2 {
+    font-size: 4rem;
+  }
 }
 
 #contact > ul {
   font-size: 2rem;
   margin: 3rem;
 }
+
 .contact-font {
   font-size: 2.5rem;
 }
@@ -363,11 +365,11 @@ font-size: 6rem;
 
 @media (max-width: 30.625em) {
   .projects-section {
-      padding: 6rem 1rem;
+    padding: 6rem 1rem;
   }
 
   .projects-grid {
-      grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
 }
 
@@ -401,9 +403,9 @@ font-size: 6rem;
 }
 
 .btn {
-display: inline-block;
-padding: 1rem 2rem;
-border-radius: 2px;
+  display: inline-block;
+  padding: 1rem 2rem;
+  border-radius: 2px;
 }
 
 .btn-show-all {
@@ -416,13 +418,13 @@ border-radius: 2px;
 }
 
 .btn-show-all:hover > i {
-transform: translateX(2px);
+  transform: translateX(2px);
 }
 
 .btn-show-all > i {
-margin-left: 10px;
-transform: translateX(0);
-transition: transform 0.3s ease-out;
+  margin-left: 10px;
+  transform: translateX(0);
+  transition: transform 0.3s ease-out;
 }
 
 #tech {
@@ -449,4 +451,3 @@ transition: transform 0.3s ease-out;
   font-size: 3rem;
   font-weight: 200;
 }
-
