Added more indexed sections to the stylesheet.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ Contents:
 1. Variables
 2. Globals
 3. Base Element Styles
+4. Body
+5. Footer
+6. Nav Menu
 */
 
 /*==========================
@@ -74,20 +77,6 @@ Media queries for proper font sizing
 /*==================== 
 3. Base Element Styles 
 ======================*/
-body {
-  background-image: url("assets/clouds-clipped.JPG");
-  font-family: 'Kosugi Maru', sans-serif;
-  font-size: 1.8rem; /* 18px */
-  font-weight: 400;
-  line-height: 1.4;
-  color: white;
-  overflow-x: hidden;
-}
-
-footer {
-  color:white;
-  text-align: center;
-}
 
 h1, h2 {
   color: white;
@@ -125,7 +114,32 @@ p {
   font-family: 'Kosugi Maru', sans-serif;
 }
 
-/* Navigation bar */
+/*==================
+4. Body
+===================*/
+body {
+  background-image: url("assets/clouds-clipped.JPG");
+  font-family: 'Kosugi Maru', sans-serif;
+  font-size: 1.8rem; /* 18px */
+  font-weight: 400;
+  line-height: 1.4;
+  color: white;
+  overflow-x: hidden;
+}
+
+/*=================
+5. Footer
+==================*/
+
+footer {
+  color:white;
+  text-align: center;
+}
+
+
+/*================
+6. Navigation bar 
+=================*/
 .nav {
   display: flex;
   justify-content: flex-end;
